# bazel-demo

./: .bazelrc  .bazelrc-ci  BUILD.bazel  README.md  WORKSPACE  cloudbuild.yaml  go.mod
.github/workflows/: main.yml
cmd/hello/: BUILD.bazel  main.go
hello/: BUILD.bazel  say.go  say_test.go
